# pokemon-map

./: .gitignore  README.md  app.py  assignment_1.py  main.py  mkslides.yml  pyproject.toml  slide_example.py
assignments/: Assignment_0.md  Assignment_0_with_solutions.md
data/: Pokemon_Stats.csv  text_1.py
datasets/: text_2.py
presentation/: README.MD
presentation/slides/: presentation.md  presentation_1.md  presentation_2.md  presentation_3.md
slides/: presentation.md
src/streamlit/: app.py  assignment_1.py  main.py  plot_pokemon.py  slide_example.py
src/streamlit_app/: __init__.py  assignment_1.py  assignment_2.py  plot_pokemon.py  slide_example.py  vibes.py
streamlit_basics/: basic_assignment_examples.md  basic_assignment_solutions.md
