[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamlit_app"
version = "0.1.0"
description = "An epic Streamlit app for the Pokemon universe nerds."
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "matplotlib>=3.10.8",
    "mkslides>=2.0.15",
    "plotly>=6.6.0",
    "pandas>=2.3.3",
    "streamlit>=1.55.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/streamlit_app"]

[tool.pylint.main]
source-roots = ["src"]
